<resources>
    <string name="app_name">SeeFood</string>
    <string name="action_settings">Settings</string>
    <string name="camera_finish_button">Finish</string>
    <string name="activity_camera">Camera</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="no_objects_found">No items found. Start detection by clicking the camera icon!</string>

    <!-- Strings For Detector Preference [CHAR LIMIT=30] -->
    <string name="settings_detector_label">Detector</string>
    <string name="settings_detector_key" translatable="false">detector_key</string>
    <string name="settings_detector_default" translatable="false">@string/settings_detector_seefood_value</string>

    <!-- Label for detector ms coco option [CHAR LIMIT=20] -->
    <string name="settings_detector_ms_coco_label">SeeFood COCO150</string>
    <string name="settings_detector_ms_coco_value" translatable="false">tiny-yolo-coco-4c-150.pb</string>

    <!-- Label for detector seefood option [CHAR LIMIT=20] -->
    <string name="settings_detector_seefood_label">SeeFood COCO100</string>
    <string name="settings_detector_seefood_value" translatable="false">tiny-yolo-coco-4c-100.pb</string>

    <!-- Strings For Detector Preference [CHAR LIMIT=30] -->
    <string name="settings_detector_threshold_label">Detector Threshold</string>
    <string name="settings_detector_threshold_key" translatable="false">threshold_key</string>
    <string name="settings_detector_threshold_default" translatable="false">0.25</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb') -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <!-- Navigation bar menu actions -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_about">About</string>
    <string name="action_preferences">Preferences</string>

    <!-- Navigation bar activities -->
    <string name="activity_about">Supported Items</string>
    <string name="activity_list">Detected Items</string>
    <string name="activity_prefs">Preferences</string>
    <string name="activity_detector_settings">Detector Settings</string>

    <!-- Preferences fragments and their corresponding keys -->
    <string name="allergies_preference_fragment">Allergies</string>
    <string name="allergies_preference_key">allergy_preferences</string>
    <string name="courses_preferences_key">courses_preferences</string>
    <string name="cuisines_preferences_key">cuisines_preferences</string>
    <string name="diet_preferences_key">diet_preferences</string>
    <string name="flavor_preferences_key">flavor_preferences</string>
    <string name="max_prep_time_key">max_prep_time</string>

</resources>
